syntax = "proto3";

service WeatherForecast {
  rpc GetForecastDay(GetForecastDayRequest) returns (ForecastDayInfo) {}
  rpc GetForecastWeek(GetForecastWeekRequest) returns (ForecastWeekInfo) {}
}

enum DayOfWeek {
  Sun = 0;
  Mon = 1;
  Tue = 2;
  Wed = 3;
  Thu = 4;
  Fri = 5;
  Sat = 6;
}

enum TemperatureUnit {
  Celsius = 0;
  Fahrenheit = 1;
}

message GetForecastDayRequest {
  DayOfWeek day_of_week = 1;
}

message ForecastDayInfo {
  DayOfWeek day_of_week = 1;
  string temperature = 2;
  TemperatureUnit unit = 3;
  string conditions = 4;
}

message GetForecastWeekRequest {}

message ForecastWeekInfo {
  repeated ForecastDayInfo forecasts = 1;
}
